[gd_scene load_steps=6 format=3 uid="uid://d1f383t0twnnu"]

[ext_resource type="PackedScene" uid="uid://be6sbtmqr5d2f" path="res://Scenes/Systems/GridManager.tscn" id="1"]
[ext_resource type="Script" uid="uid://baidl8iu0c57c" path="res://Scripts/LevelLogic/EndScreen.gd" id="2"]
[ext_resource type="FontFile" uid="uid://dpge436uj6kg4" path="res://Assets/Text/VCR_OSD_MONO_1.001.ttf" id="5_tmq5p"]
[ext_resource type="AudioStream" uid="uid://b2bnnssljo4uk" path="res://Assets/Audio/Win2.mp3" id="6"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.56, 0, 0, 1)

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="GridManager" parent="." instance=ExtResource("1")]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6")
autoplay = true

[node name="CenterContainer" type="CenterContainer" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("5_tmq5p")
theme_override_font_sizes/font_size = 48
text = "THANKS FOR PLAYING!"

[node name="PlayAgain" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_tmq5p")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("1")
text = "PLAY AGAIN"

[node name="Quit Game" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_tmq5p")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("1")
text = "QUIT"

[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit Game" to="." method="_on_Button_pressed"]
